styles.css
@font-face {
  font-family: "netflixSans-bold";
  src: url("./fonts/NetflixSans-Bold.woff2") format("woff2");
}

@font-face {
  font-family: "netflixSans-light";
  src: url("./fonts/NetflixSans-Light.woff2") format("woff2");
}
@font-face {
  font-family: "netflixSans-medium";
  src: url("./fonts/NetflixSans-Medium.woff2") format("woff2");
}
@font-face {
  font-family: "netflixSans-regular";
  src: url("./fonts/NetflixSans-Regular.woff2") format("woff2");
}

*,
*::before,
*::after {
  box-sizing: border-box;
}
:root {
  --font-netflixSans-bold: netflixSans-bold, Georgia, Cambria, "Times New Roman",
    Times, serif;

  --font-netflixSans-light: netflixSans-light, "Helvetica Neue", Helvetica,
    Arial, sans-serif;
  --font-netflixSans-medium: netflixSans-medium, "Helvetica Neue", Helvetica,
    Arial, sans-serif;
  --font-netflixSans-regular: netflixSans-regular, "Helvetica Neue", Helvetica,
    Arial, sans-serif;
  --font-color: white;
  --text-color: #737373;
  --yellow-color: #ffc017;
  --nav-link-color: rgb(41, 41, 41);
  --darkgray-btn-border: rgba(25, 25, 25, 1);
  --bg-color: #181818;
}
body {
  font-family: var(--font-netflixSans-regular);
  margin: 0;
  background-color: var(--bg-color);
  color: var(--font-color);
}
.nav-bg {
  background-color: black;
}
a {
  color: var(--text-color);
  transition: all 0.3s linear;
}
.active {
  color: var(--font-color);
}
a:hover {
  color: var(--font-color);
}
.dropdown-menu {
  background-color: var(--bg-color);
  border: 1px solid var(--text-color);
  box-shadow: 0px 5px 12px rgba(0, 0, 0, 1);
}
.dropdown-item:focus,
.dropdown-item:hover {
  color: var(--font-color);
  background-color: transparent;
}
.dropdown-item {
  color: var(--text-color);
}
.dropdown-menu-right {
  right: 0;
  left: auto;
}
.btn-outline-info {
  color: white;
  border-color: transparent;
}
.btn-outline-info:hover {
  background-color: var(--text-color);
  border-color: var(--text-color);
}
.btn-outline-info:not(:disabled):not(.disabled):active,
.show > .btn-outline-info.dropdown-toggle {
  background-color: var(--text-color);
  border-color: var(--text-color);
}
.btn-outline-info:not(:disabled):not(.disabled):active:focus,
.show > .btn-outline-info.dropdown-toggle:focus {
  box-shadow: none;
}
.border-color {
  border: 1px solid var(--text-color);
}
.dropdown-genere-btn {
  color: white;
  border-color: var(--text-color);
  border-radius: 0;
  max-height: 38px;
}
.carousel-control-prev {
  left: -2%;
}
.carousel-control-next {
  right: -2%;
}
.carousel-control-next-icon,
.carousel-control-prev-icon {
  width: 26px;
  height: 26px;
}
.carousel-control-prev-icon {
  background-image: url(./assets/media/chevron-left.svg);
}
.carousel-control-next-icon {
  background-image: url(./assets/media/chevron-right.svg);
}
.carousel-control-prev,
.carousel-control-next {
  opacity: 1;
  width: 2%;
}
.media-hover {
  transition: all 0.3s linear;
  position: relative;
}
.media-hover:hover {
  transform: scale(1.2);
}
/* .carousel-inner {
  overflow: visible;
} */
.z-index2 {
  z-index: 2;
}
.z-index3 {
  z-index: 3;
}
.z-index4 {
  z-index: 4;
}
.z-index5 {
  z-index: 5;
}
.z-index6 {
  z-index: 6;
}
.ftr-block {
  max-width: 900px;
  width: 100%;
  margin-inline: auto;
}
.ftr-link {
  font-size: 14px;
  color: var(--text-color);
}
.copyright-font {
  font-size: 12px;
  color: var(--text-color);
}

